--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ black = "^23.1.0"
 isort = "^5.12.0"
 ruff = "^0.0.243"
 nox = "^2022.11.21"
+pygments = "^2.13.0"
+mkdocs = "^1.4.2"
+mkdocstrings = {extras = ["python"], version = "^0.20.0"}
+mkdocs-material = "^9.0.11"
 
 [build-system]
 requires = ["poetry-core"]
